tests/baselines/reference/emitArrowFunctionWhenUsingArguments04.errors.txt
emitArrowFunctionWhenUsingArguments04.ts(3,19): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments04.ts (1 errors) ====
    function f() {
        var arguments;
        var a = () => arguments;
                      ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }